2009-12-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] BuildAttachment should not check the builders
        https://bugs.webkit.org/show_bug.cgi?id=32207

        This is code that got copied here by accident when the class was created.

        * Scripts/modules/commands/download.py:

2009-12-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Make LandingSequence.update aware of ports
        https://bugs.webkit.org/show_bug.cgi?id=32208

        This is required to make build work on the Chromium port because
        Chromium has a custom update-webkit.

        * Scripts/modules/landingsequence.py:

2009-12-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add early warning system commands to bugzilla-tool.

        * Scripts/bugzilla-tool:
        * Scripts/modules/landingsequence.py:
        * Scripts/modules/webkitport.py:

2009-12-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Implement Qt EarlyWarningSystem and Chromium EarlyWarningSystem
        https://bugs.webkit.org/show_bug.cgi?id=32205

        * Scripts/modules/commands/early_warning_system.py: Added.
        * Scripts/modules/commands/queues.py:

2009-12-06  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adele Peterson.

        REGRESSION (r51728): update-webkit fails when the current directory is
        not inside a Subversion working copy
        https://bugs.webkit.org/show_bug.cgi?id=32204

        * Scripts/update-webkit: Invoke isSVN() in the correct working
        directory.

2009-12-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Rename AbstractTryQueue to AbstractReviewQueue
        https://bugs.webkit.org/show_bug.cgi?id=32202

        * Scripts/modules/commands/queues.py:

2009-12-05  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Implement ChromiumPort