@@ -1,3 +1,13 @@
+2009-12-06  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        Status Server needs a way to handle uploaded results
+        https://bugs.webkit.org/show_bug.cgi?id=32209
+
+        * QueueStatusServer/queue_status.py: Add a ShowResults (results/*) command
+        * QueueStatusServer/update_status.html: Add file upload.
+
 2009-12-06  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
